@@ -8,6 +8,8 @@ import com.ideas2it.hirezy.mapper.JobSubCategoryMapper;
 import com.ideas2it.hirezy.model.JobCategory;
 import com.ideas2it.hirezy.model.JobSubCategory;
 import com.ideas2it.hirezy.repository.JobSubCategoryRepository;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -22,21 +24,17 @@ public class JobSubCategoryServiceImpl implements JobSubCategoryService {
     private JobSubCategoryRepository jobSubCategoryRepository;
 
     @Autowired
-    private JobSubCategoryMapper jobSubCategoryMapper;
-
-    @Autowired
     private  JobCategoryService jobCategoryService;
 
-    @Autowired
-    private JobCategoryMapper jobCategoryMapper;
+    private static final Logger logger = LogManager.getLogger(JobSubCategoryServiceImpl.class);
 
     @Override
     public List<JobSubCategoryDto> getAllJobSubCategories() {
         List<JobSubCategory> jobSubcategories = StreamSupport.stream(jobSubCategoryRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
 
         return jobSubcategories.stream()
-                .map(jobSubCategoryMapper::maptoJobSubCategoryDto)
+                .map(JobSubCategoryMapper::maptoJobSubCategoryDto)
                 .collect(Collectors.toList());
     }
 
@@ -44,14 +42,20 @@ public class JobSubCategoryServiceImpl implements JobSubCategoryService {
     public JobSubCategoryDto getJobSubCategoryById(Long id) {
         JobSubCategory jobSubcategory = jobSubCategoryRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("JobSubcategory not found"));
-        return jobSubCategoryMapper.maptoJobSubCategoryDto(jobSubcategory);
+        return JobSubCategoryMapper.maptoJobSubCategoryDto(jobSubcategory);
     }
 
     @Override
     public JobSubCategoryDto createJobSubcategory(JobSubCategoryDto jobSubcategoryDto) {
-        JobSubCategory jobSubCategory = jobSubCategoryMapper.toEntity(jobSubcategoryDto);
-        jobSubCategory = jobSubCategoryRepository.save(jobSubCategory);
-        return jobSubCategoryMapper.maptoJobSubCategoryDto(jobSubCategory);
+        logger.debug("Request to create JobSubCategory with details: {}", jobSubcategoryDto);
+        JobCategoryDto jobCategory = jobCategoryService.getJobCategoryById(jobSubcategoryDto.getJobCategoryId());
+        if (jobCategory == null) {
+            throw new ResourceNotFoundException("JobCategory not found");
+        }
+
+        JobSubCategory jobSubCategory = JobSubCategoryMapper.maptoJobSubCategory(jobSubcategoryDto);
+        jobSubCategory.setJobCategory(JobCategoryMapper.mapToJobCategory(jobCategory));
+        return JobSubCategoryMapper.maptoJobSubCategoryDto(jobSubCategoryRepository.save(jobSubCategory));
     }
 
     @Override
@@ -59,11 +63,11 @@ public class JobSubCategoryServiceImpl implements JobSubCategoryService {
         JobSubCategory jobSubCategory = jobSubCategoryRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("JobSubcategory not found"));
         JobCategoryDto jobCategoryDto = jobCategoryService.getJobCategoryById(jobSubCategoryDto.getJobCategoryId());
-        JobCategory jobCategory = jobCategoryMapper.mapToJobCategory(jobCategoryDto);
+        JobCategory jobCategory = JobCategoryMapper.mapToJobCategory(jobCategoryDto);
         jobSubCategory.setName(jobSubCategoryDto.getName());
         jobSubCategory.setJobCategory(jobCategory);
         jobSubCategory = jobSubCategoryRepository.save(jobSubCategory);
-        return jobSubCategoryMapper.maptoJobSubCategoryDto(jobSubCategory);
+        return JobSubCategoryMapper.maptoJobSubCategoryDto(jobSubCategory);
     }
 
     @Override
